k8s/issuance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  labels:
    app: issuance
spec:
  selector:
    app: issuance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
